INBOX-263 fix collapsing for small devices

--- a/modules/linagora.esn.unifiedinbox/frontend/css/modules/emailer.less
+++ b/modules/linagora.esn.unifiedinbox/frontend/css/modules/emailer.less
@@ -9,7 +9,7 @@
   }
 
   inbox-emailer-display {
-    .from, .to, .cc {
+    .from, .to, .cc, .date {
       .flex-start;
 
       .line-header {
